- Changed main version to 1.12 - Started to port old carpet's rules > blockEventRange > fillLimit > tileTickLimit

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ maven_group = com.kahzerx
 archives_base_name = ornithe-carpet
 
 # Dependencies
-#minecraft_version = 1.13.2
+minecraft_version = 1.12.2
 feather_build = 21
 loader_version = 0.14.24
 nests_build = 1
